# ERRAT-Rust

./: Cargo.toml  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml  release.yml
outputs/job_run/: errat.logf  errat.ps
python/errat_rs/: __init__.py  _wrapper.py  models.py
scripts/: bench.sh  compare_outputs.sh  run_sample.sh
src/: api.rs  lib.rs  main.rs  model.rs  parser.rs  pipeline.rs  python.rs  render.rs  stats.rs
tests/: cli.rs
